--- a/AirlineBookingSystem/AirlineBookingSystem.Flights.Api/AirlineBookingSystem.Flights.Api.csproj
+++ b/AirlineBookingSystem/AirlineBookingSystem.Flights.Api/AirlineBookingSystem.Flights.Api.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AirlineBookingSystem.Flights.Application\AirlineBookingSystem.Flights.Application.csproj" />
     <ProjectReference Include="..\AirlineBookingSystem.Flights.Core\AirlineBookingSystem.Flights.Core.csproj" />
     <ProjectReference Include="..\AirlineBookingSystem.Flights.Infrastructure\AirlineBookingSystem.Flights.Infrastructure.csproj" />
   </ItemGroup>
