--- a/AirlineBookingSystem/AirlineBookingSystem.Notifications.Api/appsettings.json
+++ b/AirlineBookingSystem/AirlineBookingSystem.Notifications.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+    "EventBusSettings": {
+        "HostAddress": "amqp://guest:guest@localhost:5672"
+    },
     "ConnectionStrings": {
         "DefaultConnection": "Data Source=DESKTOP-GMTEU31\\MSSQLSERVER01;Initial Catalog=AirlineBookingSystem;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
     },
