--- a/AirlineBookingSystem/AirlineBookingSystem.Bookings.Application/AirlineBookingSystem.Bookings.Application.csproj
+++ b/AirlineBookingSystem/AirlineBookingSystem.Bookings.Application/AirlineBookingSystem.Bookings.Application.csproj
@@ -7,11 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MassTransit" Version="8.3.4" />
     <PackageReference Include="MediatR" Version="12.4.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\AirlineBookingSystem.Bookings.Core\AirlineBookingSystem.Bookings.Core.csproj" />
+    <ProjectReference Include="..\AirlineBookingSystem.BuildingBlocks\AirlineBookingSystem.BuildingBlocks.csproj" />
   </ItemGroup>
 
 </Project>
