--- a/AirlineBookingSystem/AirlineBookingSystem.Payments.Api/appsettings.json
+++ b/AirlineBookingSystem/AirlineBookingSystem.Payments.Api/appsettings.json
@@ -3,7 +3,7 @@
         "HostAddress": "amqp://guest:guest@localhost:5672"
     },
     "ConnectionStrings": {
-        "DefaultConnection": "Data Source=DESKTOP-GMTEU31\\MSSQLSERVER01;Initial Catalog=AirlineBookingSystem;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+        "PostgresConnection": "Host=localhost;Port=5432;Database=PaymentDb;Username=postgres;Password=postgres123"
     },
     "Logging": {
         "LogLevel": {
