--- a/AirlineBookingSystem/AirlineBookingSystem.Flights.Api/appsettings.json
+++ b/AirlineBookingSystem/AirlineBookingSystem.Flights.Api/appsettings.json
@@ -1,5 +1,6 @@
 {
     "DatabaseSettings": {
+        // "DefaultConnection": "Data Source=DESKTOP-GMTEU31\\MSSQLSERVER01;Initial Catalog=AirlineBookingSystem;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
         "ConnectionString": "mongodb://127.0.0.1:27017?readPreference=primary&ssl=false",
         "DatabaseName": "FlightsDb",
         "CollectionName":  "Flights"
